2.3.21 (2017-XX-XX)
-------------------

Bug fixes
 - [eas] fixed opacity in EAS freebusy (#4033)

2.3.20 (2017-03-10)
-------------------

New features
 - [core] new sogo-tool checkup command to make sure user's data is sane 
 - [core] new sogo-tool manage-acl command to manage calendar/address book ACLs
 - [web] use "date" extension of Sieve to enable/disable vacation auto-reply (#1530, #1949)

Enhancements
 - [web] added Hebrew (he) translation - thanks to Raz Aidlitz
 - [web] updated CKEditor to version 4.6.2

Bug fixes
 - [core] remove all alarms before sending IMIP replies (#3925)
 - [core] fixed handling of exdates and proper intersection for fbinfo (#4051)
 - [core] remove attendees that have the same identity as the organizer (#3905)
 - [eas] improved EAS parameters parsing (#4003)
 - [eas] properly handle canceled appointments
 - [web] fixed SCAYT automatic language selection in HTML editor
 - [web] prevent 304 HTTP status code for Ajax requests on IE (#4066)

2.3.19 (2017-01-09)
-------------------

Enhancements
 - [core] added handling of BYSETPOS for BYDAY in recurrence rules
 - [core] improved IMIP handling from Exchange/Outlook clients
 - [web] update jQuery to version 1.12.4 and jQuery UI to version 1.11.4
 - [web] added SOGoMaximumMessageSizeLimit to limit webmail message size
 - [web] added photo support for LDIF import (#1084)
 - [web] updated CKEditor to version 4.6.1

Bug fixes
 - [core] honor blocking wrong login attemps within time interval (#2850)
 - [core] use source's domain when none defined and trying to match users (#3523)
 - [core] properly honor the "include in freebusy" setting (#3354)
 - [core] fix events in floating time during CalDAV's PUT operation (#2865)
 - [core] handle rounds in sha512-crypt password hashes
 - [web] return login page for unknown users (#2135)
 - [web] append ics file extension when importing events (#2308)
 - [web] set a max-height so we can scroll in the attendees list (#3666)